src/test/deca/syntax/valid/class.deca
//Description
//    Vérifier la syntaxe d'une simple class
//
//Résultats :
//   Ok
//

class A{}

{}
