src/test/deca/syntax/invalid/class_in_main.deca
//Description
//    Vérifier la decl de class
//
//Résultats :
//    Erreur Syntaxique ligne 8
//

{
class A{}
}
